appId: com.inovisec.broadsecmobileapp

---
# Launch App
- launchApp:
    clearState: true

- waitForAnimationToEnd:
    timeout: 10000

# Login Flow     
- assertVisible: "SIGN IN"

- tapOn: "Username"
- inputText: ${MOBILE_USERNAME}

- tapOn: "Password"
- inputText: ${MOBILE_PASSWORD}

- pressKey: Enter

- waitForAnimationToEnd:
    timeout: 1000

- tapOn: "LOG IN"

- waitForAnimationToEnd:
    timeout: 5000

# Update System
- tapOn: 
    text: "Later"
    optional: true

- waitForAnimationToEnd:
    timeout: 10000

# Task Flow
- assertVisible: "Company Logo"

- tapOn: "Add Task"

- waitForAnimationToEnd:
    timeout: 10000

# Task Creation
- tapOn: "Select an Action"

- tapOn: "Control"

- tapOn: "Control de velocidad"

- tapOn: "Confirm selected time"

- tapOn: "Radius"

- tapOn: "Write an address"
- inputText: "Andino"

- waitForAnimationToEnd:
    timeout: 5000

- tapOn: "Andino Shopping Mall"

- tapOn: "Create task"

# Task Edition
- tapOn: "Control de velocidad"

- tapOn: "Predefined"

- tapOn: "Select a Pre-Created Polygon"

- tapOn: "Zona Centro Occidental Sur"

- tapOn: "Edit"

- assertVisible: "Control de velocidad"

- waitForAnimationToEnd:
    timeout: 5000


# Task Deletion
- tapOn: "Delete Task"

- tapOn: "Delete"

- waitForAnimationToEnd:
    timeout: 5000

- tapOn: "Continue"

# Dashboard Flow
- assertVisible: "Home"
- tapOn: "Layer Selector"
- tapOn: "Satellite"
- tapOn: "Traffic"

- tapOn:
    point: "50%,50%"

# Search Location Flow
- tapOn: "Search location"
- tapOn: "Search Location"
- inputText: "Andino"
- waitForAnimationToEnd:
    timeout: 5000
- tapOn: "Andino Shopping Mall"
- waitForAnimationToEnd:
    timeout: 5000
- tapOn: "Cancel navigation"

# Street View Flow
- tapOn: "Layer Selector"
- tapOn: "Street View"
- tapOn:
    point: "50%,50%"
- waitForAnimationToEnd:
    timeout: 10000
- tapOn: "Exit Street View"

# Update Inventory
- tapOn: "Profile Picture"
- tapOn: "Inventory"
- waitForAnimationToEnd:
    timeout: 5000
- scrollUntilVisible:
    element: "Save"
    direction: DOWN
    timeout: 30000
- tapOn: "Cancel"
- waitForAnimationToEnd:
    timeout: 5000

# 
- tapOn: "Profile Picture"
- tapOn: 
    text: "Available"
    optional: true
- tapOn: 
    text: "Inactivity Reason"
    optional: true

- tapOn: 
    text: "517 Receso Laboral"
    optional: true

- tapOn: 
    text: "Send"
    optional: true

- waitForAnimationToEnd:
    timeout: 5000

- tapOn: 
    text: "Unavailable"
    optional: true
- tapOn: 
    text: "Confirm dialog"
    optional: true

- waitForAnimationToEnd:
    timeout: 5000

- tapOn: "Menu Icon"
- tapOn: "LOG OUT"
- waitForAnimationToEnd:
    timeout: 5000

- assertVisible: "Shift History"
- tapOn: "END SHIFT"
- tapOn: "Confirm"

- assertVisible: "SIGN IN"

- stopApp
