appId: com.inovisec.broadsecmobileapp

---

- launchApp:
    clearState: true

- waitForAnimationToEnd:
    timeout: 10000

- assertVisible: "SIGN IN"

- tapOn: "Username"
- inputText: ${MOBILE_USERNAME}

- tapOn: "Password"
- inputText: ${MOBILE_PASSWORD}

- pressKey: Enter

- waitForAnimationToEnd:
    timeout: 1000

- tapOn: "LOG IN"

- waitForAnimationToEnd:
    timeout: 5000

- tapOn: "Later"

- waitForAnimationToEnd:
    timeout: 5000

- tapOn: "Select Armament"

- tapOn: "Pistol"

- tapOn: "FICT-WPN-0001"

- tapOn: "Motorcycle"

- tapOn: "MTR-04A"

- scrollUntilVisible:
    element: "SAVE"
    direction: DOWN
    timeout: 30000

- tapOn:
    point: "85%,69%"

- tapOn:
    point: "85%,74%"

- tapOn:
    point: "85%,79%"

- tapOn: "Enter the additional value"

- inputText: "Teaser"

- tapOn:
    point: "87%,88%"

- scrollUntilVisible:
    element: "SAVE"
    direction: DOWN
    timeout: 30000

- tapOn: "SAVE"

- waitForAnimationToEnd:
    timeout: 10000

- stopApp
